--- a/architecture/index.html
+++ b/architecture/index.html
@@ -115,7 +115,7 @@
   <!--head-->
   <!--body-->
 
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
   <div class="body-landing">
     <div class="body-intro">
       <div class="t-hello" id="t-hello-1550">HELLO, </div>
@@ -147,20 +147,20 @@
 
 
   <div class="body-h">
-    <p class="vertical-line ver1"></p>
+    <p class="lineVerAll ver1"></p>
   </div>
 
   <!--architecture 1-->
   <div id="ytrigger-arch">
     <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <a href="./recreation_commons"><img src="./ar_01.svg" id="rc1"> </a>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="column widthM">
         <a class="titleL" data-aos="fade-up" href="./recreation_commons">
           RECREATION COMMONS </a>
         </p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">INTEGRATED DESIGN STUDIO, ARCH 203, Fall 2018</p>
         <p class="textM">M. Arch, CED, UC Berkeley</p>
         <p class="textM">Instructor: Roddy Creedon</p>
@@ -181,14 +181,14 @@
 
       <div class="column widthM">
         <a class="titleL" data-aos="fade-up" href="./narrow_stripes/"> NARROW STRIPES </a>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">COMPETITION, HYDE PARK LIBRARY LONDON, Fall 2017 </p>
         <p class="textM">Duration: Six Weeks </p>
         <p class="textM">Site: Location: Hyde Park, London </p>
         <p class="textM">7500 square metres approx. </p>
         <p class="textM">Maximum Built Area: 4000 square metres </p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <a href="./narrow_stripes/"> <img class="shadowAll" src="./ar_02.jpg"> </a>
     </div>
@@ -199,14 +199,14 @@
   <div id="ytrigger-arch3">
     <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <a href="./thesis_studio/"><img class="shadowAll" src="./ar_07.jpg"></a>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="column widthM">
         <a class="titleL" data-aos="fade-up" href="./thesis_studio/">ON ORDER: DIFFERENTIATED
           CONTINUITY OF
           OBJECTS
         </a>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">THESIS STUDIO, ARCH 204 A & B, 2018 - 2019 </p>
         <p class="textM">M. Arch, CED, UC Berkeley</p>
         <p class="textM">Instructor: Rudabeh Pakravan, Kyle Steinfeld </p>
@@ -221,14 +221,14 @@
     <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
       <div class="column widthM">
         <a class="titleL" data-aos="fade-up" href="./manifold_ground/">MANIFOLD GROUND </a>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">[IN]ARCH ADV, SUMMERS 2014 </p>
         <p class="textM">Summer Program, CED, UC Berkeley </p>
         <p class="textM">Instructor: Keith Plymale </p>
         <p class="textM">Duration: One Semester</p>
         <p class="textM">Site: 450 Hayes St. San Francisco, CA 94102 </p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <a class="t-title" href="./manifold_ground/"> <img class="shadowAll" src="./ar_04.jpg"></a>
     </div>
@@ -242,12 +242,12 @@
     <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <a class="t-title" href="./recovery_of_river_edges/"> <img class="shadowAll"
           src="./ar_03.jpg"></a>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="column widthM">
         <a class="titleL" data-aos="fade-up" href="./recovery_of_river_edges/"> RECOVERY OF
           RIVER EDGES </a>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Introduction to Architecture Studio 2, Spring 2016 </p>
         <p class="textM">M. Arch, CED, UC Berkeley </p>
         <p class="textM">Instructor: Jay Atherton </p>
@@ -266,13 +266,13 @@
       <div class="column widthM">
         <a class="titleL" data-aos="fade-up" href="./the_rotation_of_curves/">THE ROTATION OF
           CURVES </a>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Introduction to Architecture Studio 1, Fall 2015 </p>
         <p class="textM">M. Arch, CED, UC Berkeley </p>
         <p class="textM">Instructor: Rudabeh Pakravan </p>
         <p class="textM">Duration: One Semester</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <a class="titleL" href="./the_rotation_of_curves/"> <img class="shadowAll"
         src="./ar_05.jpg"></a>    </div>
@@ -285,11 +285,11 @@
 
     <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <a class="titleL" href="./LACAMA/"> <img class="shadowAll" src="./ar_08.jpg"></a>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="column widthM">
         <a class="titleL" data-aos="fade-up" href="./LACAMA/">LACMA</a>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">M. Arch, CED, UC Berkeley, ARCH 201, FALL 2016 </p>
         <p class="textM">Instructor: Mark Anderson</p>
         <p class="textM">Duration: One Semester</p>
@@ -307,18 +307,18 @@
 
       <div class="column widthM">
         <p class="titleL" data-aos="fade-up">KAPPE HOUSE STUDY </p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015</p>
         <p class="textM">M. Arch, CED, UC Berkeley </p>
         <p class="textM">Instructor: Yung Ho Chang </p>
         <p class="textM">Duration: One Semester, One Unit</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
 
 
 
-      <img class="widthMM" src="./ar_06.jpg">
+      <img class="widthL" src="./ar_06.jpg">
     </div>
   </div>
 
