--- a/architecture/narrow_stripes/index.html
+++ b/architecture/narrow_stripes/index.html
@@ -122,12 +122,12 @@
     <!--diagram 1-->
     <div class="row-change centerVer">
       <div class="float">
-        <img src="render.jpg" alt="DIAGRAM" class="image">
+        <img src="render.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"></div>
+      <div class="blankVer"></div>
       <div class="column widthM">
         <P class="titleL">NARROW STRIPES</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Using a series of straps to divide the space that providing an
           infrastructure space serves the community nearby</p>
       </div>
@@ -150,12 +150,12 @@
     <div class="row-change row-changeRV centerVer">
       <div class="column widthM">
         <p class="titleL">PROGRAMS</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Three categories of programs. Social and Leisure, Library, and
           miscellaneous</p>
       </div>
       <div class="column float">
-        <img src="diagram.jpg" alt="DIAGRAM" class="image">
+        <img src="diagram.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--diagram 2-->
@@ -173,13 +173,13 @@
     <!--Section Perspective -->
     <div class="row-change centerVer">
       <div class="column float">
-        <img src="render1.jpg" alt="DIAGRAM" class="image">
+        <img src="render1.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="column widthM">
         <P class="titleL">RENDERS</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Multiple views</p>
       </div>
     </div>
@@ -196,33 +196,33 @@
     <div class="row-change row-changeRV centerVer">
       <div class="column widthM">
         <p class="titleL">SITE PLAN</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Relationship between site and the infrastructure building</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="float">
-        <img src="siteplan.jpg" alt="DIAGRAM" class="image">
+        <img src="siteplan.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--Plan-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
     <!--Plan site-->
     <div class="row-change centerVer">
       <div class="column float">
-        <img src="site.jpg" alt="DIAGRAM" class="image">
+        <img src="site.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="column widthM">
         <p class="titleL"> SITE</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Location: Hyde Park, London</p>
       </div>
 
     </div>
     <!--Plan site-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
 
 
