--- a/architecture/other_academic_works/index.html
+++ b/architecture/other_academic_works/index.html
@@ -70,22 +70,22 @@
       <br>
       <br>
       <br>
-      <img src="./factory_site1.jpg" alt="Renovation of a Factory Building" class="image">
+      <img src="./factory_site1.jpg" alt="Renovation of a Factory Building" >
       <br>
       <br>
       
       <div class = container-body-project-img>
-      <img src="./factory_diagram5.jpg" alt="Renovation of a Factory Building" class="image">
+      <img src="./factory_diagram5.jpg" alt="Renovation of a Factory Building" >
       <br>
       <br>
       <br>
       <br>
-      <img src="./factory_site2.jpg" alt="Renovation of a Factory Building" class="image">
+      <img src="./factory_site2.jpg" alt="Renovation of a Factory Building" >
       <br>
       <br>
       <br>
       <br> 
-      <img src="./factory_site3.jpg" alt="Renovation of a Factory Building" class="image">
+      <img src="./factory_site3.jpg" alt="Renovation of a Factory Building" >
 
       <br>
       <br>
@@ -94,37 +94,37 @@
 
 
 
-      <img src="./factory_diagram3.jpg" alt="Renovation of a Factory Building" class="image">
+      <img src="./factory_diagram3.jpg" alt="Renovation of a Factory Building" >
 
       <br>
       <br>
-      <img src="./factory_diagram4.jpg" alt="Renovation of a Factory Building" class="image">
+      <img src="./factory_diagram4.jpg" alt="Renovation of a Factory Building" >
       <br>
       <br>
     </div>
 
-      <img src="./factory_diagram8.jpg" alt="Renovation of a Factory Building" class="image">
+      <img src="./factory_diagram8.jpg" alt="Renovation of a Factory Building" >
       <br>
       <br>
       <br>
       <br>
-      <img src="./factory_massing.jpg" alt="Renovation of a Factory Building" class="image">
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <img src="./factory_diagram2.jpg" alt="Renovation of a Factory Building" class="image">
+      <img src="./factory_massing.jpg" alt="Renovation of a Factory Building" >
       <br>
       <br>
       <br>
       <br>
       <br>
       <br>
-      <img src="./factory_render.jpg" alt="Renovation of a Factory Building" class="image">
+      <img src="./factory_diagram2.jpg" alt="Renovation of a Factory Building" >
       <br>
-      <img src="./factory_render1.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <img src="./factory_render.jpg" alt="Renovation of a Factory Building" >
+      <br>
+      <img src="./factory_render1.jpg" alt="Renovation of a Factory Building" >
       <br>
       <br>
       <br>
@@ -132,33 +132,33 @@
       <br>
       <br>
 
-      <img src="./factory_diagram.jpg" alt="Renovation of a Factory Building" class="image">
+      <img src="./factory_diagram.jpg" alt="Renovation of a Factory Building" >
       <br>
       <br>
       <br>
       <br>
       <div class = container-body-project-img>
 
-      <img src="./factory_diagram7.jpg" alt="Renovation of a Factory Building" class="image">
+      <img src="./factory_diagram7.jpg" alt="Renovation of a Factory Building" >
       <br>
       <br>
       <br>
       <br>
-      <img src="./factory_diagram6.jpg" alt="Renovation of a Factory Building" class="image">
+      <img src="./factory_diagram6.jpg" alt="Renovation of a Factory Building" >
       <br>
       <br>
       <br>
       <br>
     </div>
 
-      <img src="./factory_facade.jpg" alt="Renovation of a Factory Building " class="image">
+      <img src="./factory_facade.jpg" alt="Renovation of a Factory Building " >
       <br>
       <br>
       <br>
       <br>
       <br>
       <br>
-      <div class="horizontal-line"></div>
+      <div class="lineHorizAll"></div>
       <br>
       <br>
       <br>
@@ -173,33 +173,33 @@
       <br>
       <br>
       <br>
-      <img src="./village2.jpg" alt="Renovation of a Factory Building" class="image">
+      <img src="./village2.jpg" alt="Renovation of a Factory Building" >
       <br>
       <br>
       <br>
       <br>
       <br>
       <br>
-      <img src="./village.jpg" alt="Renovation of a Factory Building" class="image">
+      <img src="./village.jpg" alt="Renovation of a Factory Building" >
       <br>
       <br>
       <br>
       <br>
       <br>
       <br>
-      <img src="./village1.jpg" alt="Renovation of a Factory Building" class="image">
+      <img src="./village1.jpg" alt="Renovation of a Factory Building" >
       <br>
       <br>
       <br>
       <br>
 
-      <div class = container-body-project-img> <img src="./village3.jpg" alt="Renovation of a Factory Building" class="image">
+      <div class = container-body-project-img> <img src="./village3.jpg" alt="Renovation of a Factory Building" >
       </div>
       <br>
       <br>
       <br>
       <br>
-      <img src="./village4.jpg" alt="Renovation of a Factory Building" class="image">
+      <img src="./village4.jpg" alt="Renovation of a Factory Building" >
       <br>
       <br>
       <br>
@@ -208,19 +208,19 @@
 
       <br>
       <br>
-      <img src="./village5.jpg" alt="Renovation of a Factory Building" class="image">
+      <img src="./village5.jpg" alt="Renovation of a Factory Building" >
       <br>
       <br>
 
 
-      <img src="./village6.jpg" alt="Renovation of a Factory Building" class="image">
+      <img src="./village6.jpg" alt="Renovation of a Factory Building" >
       <br>
       <br>
 
       <br>
       <br>
 
-      <img src="./village7.jpg" alt="Renovation of a Factory Building" class="image">
+      <img src="./village7.jpg" alt="Renovation of a Factory Building" >
       <br>
       <br>
 
