--- a/architecture/recovery_of_river_edges/index.html
+++ b/architecture/recovery_of_river_edges/index.html
@@ -115,18 +115,18 @@
 
   <!--body-->
   <div class="marginAll">
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
 
     <!--diagram 1-->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="diagram.jpg" alt="DIAGRAM" class="image">
+        <img src="diagram.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"></div>
+      <div class="blankVer"></div>
       <div class="body-right body-txt">
         <P class="titleL">RECOVERY OF RIVER EDGES</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Site: Sunnynook River Park, 2901 Glendale Blvd, Los Angeles, CA 90039
         </p>
       </div>
@@ -143,13 +143,13 @@
     <div class="body-h">
       <div class="body-right body-txt">
         <p class="titleL"> DENSITY OF DIVISIONS</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Research to project</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-left body-img float">
-        <img src="density.jpg" alt="DIAGRAM" class="image">
+        <img src="density.jpg" alt="DIAGRAM" >
       </div>
 
 
@@ -170,33 +170,33 @@
     <div class="body-h">
       <div class="body-right  body-txt">
         <p class="titleL">SITE ANALYSIS</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">The site is located in the LA River near the Sunnynook River Park.</p>
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
 
       <div class="body-left body-img float">
-        <img src="site.jpg" alt="DIAGRAM" class="image">
+        <img src="site.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--site -->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
     <!--site -->
     <div class="body-h">
       <div class="body-right  body-txt">
         <p class="titleL">SITE RESEARCH METHOD</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Photos below were taken from the linear path. Each photo took in
           between every single six feet along the path. </p>
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
 
       <div class="body-left body-img float">
-        <img src="site_0.jpg" alt="DIAGRAM" class="image">
+        <img src="site_0.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--site -->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
     <!-- content-->
     <div class="content-tl">
       <p class="tArrow"> Photos of Sequences and Movements </p>
@@ -206,12 +206,12 @@
     <!--Section Perspective -->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="research_photos.jpg" alt="DIAGRAM" class="image">
+        <img src="research_photos.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
       <div class="body-right body-txt">
         <P class="titleL">Photos of Sequences and Movements</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">the sequences of photos show the relationship between subjects(the
           place where took photos) and objects(main object on site).</p>
       </div>
@@ -228,29 +228,29 @@
     <div class="body-h">
       <div class="body-right  body-txt">
         <p class="titleL">RESEARCH ON SITE</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Transform the research final result to site</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-left body-img float">
-        <img src="research.jpg" alt="DIAGRAM" class="image">
+        <img src="research.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--research-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!--research-->
     <div class="body-h">
       <div class="body-right  body-txt">
         <p class="titleL">FINAL VIEWS</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">On-site view before vs. after</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-left body-img float">
-        <img src="research_1.jpg" alt="DIAGRAM" class="image">
+        <img src="research_1.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--research-->
@@ -261,69 +261,69 @@
     </div>
     <!-- content-->
 
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
     <!--programs-->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="programs.jpg" alt="DIAGRAM" class="image">
+        <img src="programs.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-right body-txt">
         <P class="titleL">PROGRAMS</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Cafe, restaurant, kayak</p>
       </div>
     </div>
     <!--programs-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!--programs-->
     <div class="body-h">
       <div class="body-right  body-txt">
         <p class="titleL">DIAGRAMS</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Relationship between site and the surrounding</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-left body-img float">
-        <img src="diagram_1.jpg" alt="DIAGRAM" class="image">
+        <img src="diagram_1.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--programs-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
     <!--plan -->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="plan.jpg" alt="DIAGRAM" class="image">
+        <img src="plan.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-right body-txt">
         <P class="titleL">FLOOR PLAN</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Horizontal division create the space with dynamic view</p>
       </div>
     </div>
     <!--plan -->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!--render-->
     <div class="body-h">
       <div class="body-right  body-txt">
         <p class="titleL">Collages</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Experiencing the space with human perspective</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-left body-img float">
-        <img src="render.jpg" alt="DIAGRAM" class="image">
+        <img src="render.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--render-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
 
 
