--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -122,11 +122,11 @@
 
     <!--diagram 1-->
     <div class="row centerVer centerHorz">
-      <img src="diagram.jpg" alt="DIAGRAM" class="float widthMM">
+      <img src="diagram.jpg" alt="DIAGRAM" class="float widthL">
 
       <div class="column">
         <P class="titleL">TWO VOLUMES IN ONE SPACE</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">the purpose of these two volumes is to distinguish two types of
           programs: for the public, another for private use.</p>
       </div>
@@ -147,19 +147,19 @@
       <img src="programs.jpg" alt="DIAGRAM" class=" float">
 
       <p class="titleL">PRIVATE VS. PUBLIC</p>
-      <p class="horizontal-line"></p>
+      <p class="lineHorizAll"></p>
       <p class="textM widthL">insert two volumes into one space two distinguish two main
         programs. one for the public, another one for private purpose</p>
 
     </div>
     <!--diagram 1-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
     <!--diagram 2-->
     <div class="column centerVer centerHorz">
       <img src="diagram0.jpg" alt="DIAGRAM" class="float">
 
       <p class="titleL">EXERCISE VS. LEISURE</p>
-      <p class="horizontal-line"></p>
+      <p class="lineHorizAll"></p>
       <p class="textM widthL">the circulation integrates the two volumes as one space. it creates
         a
         dynamic view between the leisure and training sections.</p>
@@ -177,11 +177,11 @@
     <div class="body-h">
       <div class="body-right  body-txt marginAll">
         <p class="titleS">THE MANIPULATION OF TWO VOLUMES</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Void vs. Solid</p>
       </div>
       <div class="body-left body-img float">
-        <img src="diagram1.jpg" alt="DIAGRAM" class="image">
+        <img src="diagram1.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--environmental diagram-->
@@ -189,14 +189,14 @@
     <div class="body-h">
       <div class="body-right  body-txt marginAll">
         <p class="titleS">LIGHT AND AIR</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
 
         <p class="textM">an opening on the southern side provides and a gap between adjacent
           build providing all-day nature daylight from the top all the way to the swimming pool at
           first floor</p>
       </div>
       <div class="body-left body-img float">
-        <img src="diagram2.jpg" alt="DIAGRAM" class="image">
+        <img src="diagram2.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--environmental diagram-->
@@ -204,18 +204,18 @@
     <div class="body-h">
       <div class="body-right  body-txt marginAll">
         <p class="titleS">FACADE DESGIN</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
 
         <p class="textM">all the windows equally set, and the metal mesh with two types of
           coating redomly setup</p>
       </div>
       <div class="body-left body-img float">
-        <img src="diagram3.jpg" alt="DIAGRAM" class="image">
+        <img src="diagram3.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--environmental diagram-->
 
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
 
     <!--Section Perspective -->
@@ -224,12 +224,12 @@
 
       <div class="body-right body-txt widthXS">
         <P class="titleL">SECTION PERSPECTIVE</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">F1-5 with Facade Detail</p>
       </div>
     </div>
     <!--Section Perspective -->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!-- content-->
     <div class="content-tl">
@@ -242,47 +242,47 @@
     <div class="body-h">
       <div class="body-right  body-txt">
         <p class="titleL">INTERIOR VIEW</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
 
         <p class="textM">Interior view from the public side</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-left float">
-        <img src="render_int1.jpg" alt="DIAGRAM" class="image">
+        <img src="render_int1.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--renders 2-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
     <!--renders 3-->
     <div class="body-h">
       <div class="body-left float">
-        <img src="render_int2.jpg" alt="DIAGRAM" class="image">
+        <img src="render_int2.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-right body-txt">
         <p class="titleL">INTERIOR VIEW</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Interior view from the activity room</p>
       </div>
 
     </div>
     <!--renders 3-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!--renders 2-->
     <div class="body-h">
       <div class="body-right  body-txt">
         <p class="titleL">STREET VIEW</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
 
         <p class="textM">Street view from south west</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-left float">
-        <img src="render_streetview.jpg" alt="DIAGRAM" class="image">
+        <img src="render_streetview.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--renders 2-->
@@ -297,54 +297,54 @@
     <!-- content-->
     <!--plans and sections 1-->
     <div class="column centerVer centerHorz">
-      <img src="plan_f1.jpg" alt="DIAGRAM" class="image">
+      <img src="plan_f1.jpg" alt="DIAGRAM" >
 
       <p class="titleL">FLOOR PLANS </p>
-      <p class="horizontal-line"></p>
+      <p class="lineHorizAll"></p>
       <p class="textM">F1 and F2</p>
     </div>
 
     <!--plans and sections 1-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
     <!--plans and sections 2-->
     <div class="column centerVer centerHorz">
-      <img src="plan_f3.jpg" alt="DIAGRAM" class="image">
+      <img src="plan_f3.jpg" alt="DIAGRAM" >
 
       <p class="titleL">FLOOR PLANS </p>
-      <p class="horizontal-line"></p>
+      <p class="lineHorizAll"></p>
       <p class="textM">F3 and F4</p>
 
     </div>
     <!--plans and sections 2-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
     <!--plans and sections 3-->
     <div class="column centerVer centerHorz">
-      <img src="plan_f5.jpg" alt="plans and sections" class="image">
+      <img src="plan_f5.jpg" alt="plans and sections" >
 
       <p class="titleL">FLOOR PLANS </p>
-      <p class="horizontal-line"></p>
+      <p class="lineHorizAll"></p>
       <p class="textM">F5 and Facade Detail</p>
 
     </div>
     <!--plans and sections 3-->
 
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
     <!--plans and sections 2-->
     <div class="column centerVer centerHorz">
-      <img src="sections_l.jpg" alt="DIAGRAM" class="image">
+      <img src="sections_l.jpg" alt="DIAGRAM" >
 
       <P class="titleL"> SECTIONS</P>
-      <p class="horizontal-line"></p>
+      <p class="lineHorizAll"></p>
       <p class="textM">F5 and Facade Detail</p>
     </div>
     <!--plans and sections 2-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
     <!--plans and sections 3-->
     <div class="column centerVer centerHorz">
-      <img src="section_1.jpg" alt="Section1" class="image">
-      <img src="section_2.jpg" alt="Section2" class="image">
+      <img src="section_1.jpg" alt="Section1" >
+      <img src="section_2.jpg" alt="Section2" >
       <P class="titleL">SECTIONS</P>
-      <p class="horizontal-line"></p>
+      <p class="lineHorizAll"></p>
       <p class="textM">Section Detail</p>
     </div>
     <!--plans and sections 3-->
@@ -356,15 +356,15 @@
     <!-- content-->
     <!--site-->
     <div class="column centerVer centerHorz">
-      <img src="site.jpg" alt="DIAGRAM" class="image">
+      <img src="site.jpg" alt="DIAGRAM" >
 
       <p class="titleL">SITE </p>
-      <p class="horizontal-line"></p>
+      <p class="lineHorizAll"></p>
       <p class="textM">110 Franklin St. San Francisco, CA, 94102</p>
 
     </div>
     <!--site-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
 
 
