--- a/architecture/the_rotation_of_curves/index.html
+++ b/architecture/the_rotation_of_curves/index.html
@@ -120,13 +120,13 @@
     <!--site -->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="render0.jpg" alt="DIAGRAM" class="image">
+        <img src="render0.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
 
       <div class="body-right  body-txt">
         <p class="titleL">THE ROTATION OF CURVES </p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Foam finding and geometry manipulation</p>
       </div>
 
@@ -145,12 +145,12 @@
     <div class="body-h">
       <div class="body-right body-txt">
         <P class="titleL"> A 20 FEET DIAMETER SITE</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Adding geometries based on requirement </p>
       </div>
-      <div class="vertical-line-blank"></div>
+      <div class="blankVer"></div>
       <div class="body-left body-img float">
-        <img src="island.jpg" alt="DIAGRAM" class="image">
+        <img src="island.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--geometry-->
@@ -159,14 +159,14 @@
     <div class="body-h">
       <div class="body-right body-txt">
         <P class="titleL"> ADDING OR BOOLEAN GEOMETRY ON SITE</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">1st week, 6 volumes</p>
           <p class="textM">2nd week, 8 geometries</p>
         <p class="textM"> 3rd week, 20 volumes</p>
       </div>
-      <div class="vertical-line-blank"></div>
+      <div class="blankVer"></div>
       <div class="body-left body-img float">
-        <img src="island1.jpg" alt="DIAGRAM" class="image">
+        <img src="island1.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--geometry-->
@@ -182,13 +182,13 @@
     <div class="body-h">
       <div class="body-right body-txt">
         <p class="titleL">TWO CUTS ONE FOAM</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Cut and fold the foam</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-left body-img float">
-        <img src="foamcut.jpg" alt="DIAGRAM" class="image">
+        <img src="foamcut.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--density-->
@@ -199,13 +199,13 @@
     <div class="body-h">
       <div class="body-right  body-txt">
         <p class="titleL">PHOTOS OF THE FOAM</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Elevation view</p>
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
 
       <div class="body-left body-img float">
-        <img src="foam0.jpg" alt="DIAGRAM" class="image">
+        <img src="foam0.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--site -->
@@ -217,12 +217,12 @@
     <!--Section Perspective -->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="line3.jpg" alt="DIAGRAM" class="image">
+        <img src="line3.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
       <div class="body-right body-txt">
         <P class="titleL">DRAWING        </P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">From the surrounding building people can see this build as an urban
           sculpture</p>
       </div>
@@ -235,16 +235,16 @@
     <div class="body-h">
       <div class="body-right  body-txt">
         <p class="titleL"> DRAWING    </p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">This site is one of the most popular places in san Francisco. Along
           the city axis, there are Saint Mary's Cathedral, SF City Hall, and there is a freeway
           entrance on the southern side.
         </p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-left body-img float">
-        <img src="line2.jpg" alt="DIAGRAM" class="image">
+        <img src="line2.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--Site -->
@@ -257,12 +257,12 @@
     <!--Site -->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="foamisland.jpg" alt="DIAGRAM" class="image">
+        <img src="foamisland.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
       <div class="body-right body-txt">
         <P class="titleL">PART I + PART II = PART III</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Combine the island and the foam</p>
 
       </div>
@@ -272,15 +272,15 @@
     <div class="body-h">
       <div class="body-right  body-txt">
         <p class="titleL">FLOOR PLANS </p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">A conceptual 4-story single-family house  </p>
         <p class="textM"> the form-finding concept of rotation curves shows in these plans </p>
 
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-left body-img float">
-        <img src="plan.jpg" alt="DIAGRAM" class="image">
+        <img src="plan.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--Site -->
@@ -288,12 +288,12 @@
     <!--Site -->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="elv.jpg" alt="DIAGRAM" class="image">
+        <img src="elv.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
       <div class="body-right body-txt">
         <P class="titleL">ELEVATIONS</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Concrete facade with openings</p>
 
       </div>
@@ -303,15 +303,15 @@
     <div class="body-h">
       <div class="body-right  body-txt">
         <p class="titleL">SECTIONS</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">
           the form-finding concept of rotation curves shows in these sections
         </p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-left body-img float">
-        <img src="section.jpg" alt="DIAGRAM" class="image">
+        <img src="section.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--Site -->
@@ -319,18 +319,18 @@
     <!--Site -->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="render.jpg" alt="DIAGRAM" class="image">
+        <img src="render.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
       <div class="body-right body-txt">
         <P class="titleL">RENDERS</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Two views from the inside of the house</p>
 
       </div>
     </div>
     <!--Site -->
-    <div class="blank-lineheight-Xl"></div>
+    <div class="blankHXL"></div>
 
 
 
