--- a/photography/index.html
+++ b/photography/index.html
@@ -113,7 +113,7 @@ Interested in what you see? Shoot me an email :) " />
   </div>
   <!--head-->
   <!--body-->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <div class="body-landing">
     <div class="body-intro">
@@ -142,18 +142,18 @@ Interested in what you see? Shoot me an email :) " />
   </div>
 
   <div class="body-h">
-    <p class="vertical-line ver1"></p>
+    <p class="lineVerAll ver1"></p>
   </div>
 
   <!--Photo 1-->
   <div id="ytrigger-pg">
     <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./01.jpg">
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="column widthM">
         <p class="titleL">Bosque Del Apache National Wildlife Refuge</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
@@ -170,11 +170,11 @@ Interested in what you see? Shoot me an email :) " />
 
       <div class="column widthM">
         <p class="titleL">Bosque Del Apache National Wildlife Refuge</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <img class="float shadowAll" src="./02.jpg">
     </div>
@@ -188,11 +188,11 @@ Interested in what you see? Shoot me an email :) " />
   <div id="ytrigger-pg3">
     <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./03.jpg">
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="column widthM">
         <p class="titleL">Bosque Del Apache National Wildlife Refuge</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
@@ -209,11 +209,11 @@ Interested in what you see? Shoot me an email :) " />
 
       <div class="column widthM">
         <p href="/Photography" class="titleL">Sacramento National Wildlife Refuge</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <img class="float shadowAll" src="./04.jpg">
     </div>
@@ -228,11 +228,11 @@ Interested in what you see? Shoot me an email :) " />
 
     <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./05.jpg">
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="column widthM">
         <p href="/Photography" class="titleL">Sacramento National Wildlife Refuge</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
@@ -247,11 +247,11 @@ Interested in what you see? Shoot me an email :) " />
 
       <div class="column widthM">
         <p href="/Photography" class="titleL">Sacramento National Wildlife Refuge</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <img class="float shadowAll" src="./06.jpg">
     </div>
@@ -263,11 +263,11 @@ Interested in what you see? Shoot me an email :) " />
   <div id="ytrigger-pg7">
     <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./07.jpg">
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="column widthM">
         <p class="titleL">Teton National Park </p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">September, 2020</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
@@ -283,11 +283,11 @@ Interested in what you see? Shoot me an email :) " />
 
       <div class="column widthM">
         <p class="titleL">White Sands National Monument</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <img class="float shadowAll" src="./08.jpg">
     </div>
@@ -300,11 +300,11 @@ Interested in what you see? Shoot me an email :) " />
 
     <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./09.jpg">
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="column widthM">
         <p class="titleL">White Sands National Monument</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
@@ -319,11 +319,11 @@ Interested in what you see? Shoot me an email :) " />
 
       <div class="column widthM">
         <p class="titleL">White Sands National Monument</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <img class="float shadowAll" src="./10.jpg">
     </div>
@@ -335,11 +335,11 @@ Interested in what you see? Shoot me an email :) " />
   <div id="ytrigger-pg11">
     <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./11.jpg">
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="column widthM">
         <p class="titleL">White Sands National Monument</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
@@ -356,11 +356,11 @@ Interested in what you see? Shoot me an email :) " />
 
       <div class="column widthM">
         <p class="titleL">White Sands National Monument</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <img class="float shadowAll" src="./12.jpg">
     </div>
@@ -375,11 +375,11 @@ Interested in what you see? Shoot me an email :) " />
 
     <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./13.jpg">
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="column widthM">
         <p class="titleL">White Sands National Monument</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
@@ -395,11 +395,11 @@ Interested in what you see? Shoot me an email :) " />
 
       <div class="column widthM">
         <p class="titleL">White Sands National Monument</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <img class="float shadowAll" src="./14.jpg">
     </div>
@@ -412,11 +412,11 @@ Interested in what you see? Shoot me an email :) " />
   <div id="ytrigger-pg15">
     <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./15.jpg">
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="column widthM">
         <p class="titleL">Yellowstone National Park</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">September, 2020 </p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
@@ -432,11 +432,11 @@ Interested in what you see? Shoot me an email :) " />
 
       <div class="column widthM">
         <p class="titleL">Taos Pueblo Indian Reservation</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <img class="float shadowAll" src="./16.jpg">
     </div>
@@ -450,11 +450,11 @@ Interested in what you see? Shoot me an email :) " />
   <div id="ytrigger-pg17">
     <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./17.jpg">
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="column widthM">
         <p class="titleL">Donner Lake </p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">December, 2019 </p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
@@ -469,11 +469,11 @@ Interested in what you see? Shoot me an email :) " />
 
       <div class="column widthM">
         <p class="titleL">Yellowstone National Park</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <img class="float shadowAll" src="./19.jpg">
     </div>
@@ -497,7 +497,7 @@ Interested in what you see? Shoot me an email :) " />
 
   </button>
   <!--back to top-->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
 
   <!--footer-->
