--- a/project/appointment_maker/index.html
+++ b/project/appointment_maker/index.html
@@ -115,17 +115,18 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="blankPHONE"></div>
 
 
   <!--about appointmentmaker-->
 
   <div class="bgGrey">
+    <div class="blankPHONE"></div>
+
     <div class="column centerVer">
 
       <div class="blankHL"></div>
       <div class="column centerVer">
-        <img src="../../layout_AppointmentMaker.png" alt="Meal Planner" class="widthXXL float">
+        <img src="../../layout_AppointmentMaker.png" alt="Meal Planner" class=" float">
 
         <div class="blankHS"></div>
         <P class="titleL">Appointment Maker</P>
@@ -167,10 +168,10 @@
             <div class="align-right widthM">
               <div class="column centerVer ">
                 <div class="row centerHorz">
-                  <img class="iconLOGO" src="logo_adobe.png" alt="adobe">
-                  <img class="iconLOGO" src="logo_ai.png" alt="adobe">
-                  <img class="iconLOGO" src="logo_ps.png" alt="adobe">
-                  <img class="iconLOGO" src="logo_figma.png" alt="adobe">
+                  <img class="widthLogo" src="logo_adobe.png" alt="adobe">
+                  <img class="widthLogo" src="logo_ai.png" alt="adobe">
+                  <img class="widthLogo" src="logo_ps.png" alt="adobe">
+                  <img class="widthLogo" src="logo_figma.png" alt="adobe">
                 </div>
                 <p class="textS">Design and Research </p>
               </div>
@@ -179,10 +180,10 @@
             <div class="align-left widthM">
               <div class="column centerVer">
                 <div class="row centerHorz">
-                  <img class="iconLOGO" src="logo_html.png" alt="adobe">
-                  <img class="iconLOGO" src="logo_css.png" alt="adobe">
-                  <img class="iconLOGO" src="logo_js.png" alt="adobe">
-                  <img class="iconLOGO" src="logo_github.png" alt="adobe">
+                  <img class="widthLogo" src="logo_html.png" alt="adobe">
+                  <img class="widthLogo" src="logo_css.png" alt="adobe">
+                  <img class="widthLogo" src="logo_js.png" alt="adobe">
+                  <img class="widthLogo" src="logo_github.png" alt="adobe">
 
                 </div>
                 <p class="textS">Programming</p>
@@ -227,7 +228,7 @@
           <div class="align-right widthM">
             <div class="column centerVer ">
               <div class="row centerHorz">
-                <img class="iconLOGO" src="logo_coursera.svg" alt="adobe">
+                <img class="widthLogo" src="logo_coursera.svg" alt="adobe">
 
               </div>
               <p class="textS">Coursera </p>
@@ -236,7 +237,7 @@
           <div class="verLineAM"></div>
           <div class="align-left widthM">
             <div class="column align-left">
-              <img class="iconLOGO" src="logo_google.png" alt="adobe">
+              <img class="widthLogo" src="logo_google.png" alt="adobe">
               <p class="textS">UX Design Certificate</p>
               <p class="textS">Project 1</p>
 
@@ -259,52 +260,52 @@
     <div class="blankHL"></div>
     <div class="row-change align-top centerHorz alignCPH">
 
-      <div class="column centerVer padding-s border-radius shadowOnly heightM float">
+      <div class="column centerVer padding-s border-radius shadowOnly heightS heightS1920 widthXS marginS float">
         <P class="centerVer centerHorz titleM ">
           Empathize </P>
         <div class="blankHS"></div>
 
         <div class="column align-left">
           <ul class="row align-top">
-            <img class="icon-list" src="list.svg" alt="&bull;">
+            <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Personas </li>
           </ul>
 
           <ul class="row align-top">
-            <img class="icon-list" src="list.svg" alt="&bull;">
+            <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> User Journey Map</li>
           </ul>
         </div>
       </div>
-      <div class="blankVS"></div>
+      <div class="blankHS"></div>
 
 
-      <div class="column centerVer padding-s border-radius shadowOnly heightM widthXS float">
+      <div class="column centerVer padding-s border-radius shadowOnly heightS heightS1920 widthXS marginS float">
         <P class="centerVer centerHorz titleM">
           Define </P>
         <div class="blankHS"></div>
 
         <div class="column align-left">
           <ul class="row align-top">
-            <img class="icon-list" src="list.svg" alt="&bull;">
+            <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Defining user problems </li>
           </ul>
 
           <ul class="row align-top">
-            <img class="icon-list" src="list.svg" alt="&bull;">
+            <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Competitive Audit </li>
           </ul>
 
           <ul class="row align-top">
-            <img class="icon-list" src="list.svg" alt="&bull;">
+            <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Brainstorm ideas
             </li>
           </ul>
         </div>
       </div>
-      <div class="blankVS"></div>
+      <div class="blankHS"></div>
 
-      <div class="column centerVer padding-s border-radius shadowOnly heightM widthXS float">
+      <div class="column centerVer padding-s border-radius shadowOnly heightS heightS1920 widthXS marginS float">
         <P class="centerVer centerHorz titleM">
           Ideate </P>
         <div class="blankHS"></div>
@@ -313,27 +314,27 @@
 
         <div class="column align-left">
           <ul class="row align-top">
-            <img class="icon-list" src="list.svg" alt="&bull;">
+            <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Storyboards</li>
           </ul>
           <ul class="row align-top">
-            <img class="icon-list" src="list.svg" alt="&bull;">
+            <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> wireframes</li>
           </ul>
           <ul class="row align-top">
-            <img class="icon-list" src="list.svg" alt="&bull;">
+            <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Information Architecture </li>
           </ul>
           <ul class="row align-top">
-            <img class="icon-list" src="list.svg" alt="&bull;">
+            <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Prototypes </li>
           </ul>
         </div>
       </div>
-      <div class="blankVS"></div>
+      <div class="blankHS"></div>
 
 
-      <div class="column centerVer padding-s border-radius shadowOnly heightM widthXS float">
+      <div class="column centerVer padding-s border-radius shadowOnly heightS heightS1920 widthXS marginS float">
         <P class="centerVer centerHorz titleM">
           Design
         </P>
@@ -342,26 +343,26 @@
         <div class="column align-left">
 
           <ul class="row align-top">
-            <img class="icon-list" src="list.svg" alt="&bull;">
+            <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Branding</li>
           </ul>
           <ul class="row align-top">
-            <img class="icon-list" src="list.svg" alt="&bull;">
+            <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Wireframes</li>
           </ul>
           <ul class="row align-top">
-            <img class="icon-list" src="list.svg" alt="&bull;">
+            <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Prototypes </li>
           </ul>
           <ul class="row align-top">
-            <img class="icon-list" src="list.svg" alt="&bull;">
+            <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Visal Design </li>
           </ul>
         </div>
       </div>
-      <div class="blankVS"></div>
+      <div class="blankHS"></div>
 
-      <div class="column centerVer padding-s border-radius shadowOnly heightM widthXS float">
+      <div class="column centerVer padding-s border-radius shadowOnly heightS heightS1920 widthXS marginS float">
         <P class="centerVer centerHorz titleM">
           Testing </P>
         <div class="blankHS"></div>
@@ -369,7 +370,7 @@
         <div class="column align-left">
 
           <ul class="row centerVer">
-            <img class="icon-list" src="list.svg" alt="&bull;">
+            <img class="widthIconS" src="list.svg" alt="&bull;">
             <li class="textS"> Usability Testing</li>
           </ul>
         </div>
@@ -455,7 +456,7 @@
           <div class="widthM">
             <P class="titleS align-right">Steps</P>
           </div>
-          <div class="vertical-line"></div>
+          <div class="lineVerAll"></div>
           <div class=" columnNon widthM">
             <P class="textS"> Insert a goal</P>
             <P class="textS"> Select persona </P>
@@ -600,7 +601,7 @@
         <P class="titleS align-right">UX Design</P>
 
       </div>
-      <div class="vertical-line"></div>
+      <div class="lineVerAll"></div>
       <div class=" columnNon widthM">
         <P class="textS"> Outline the competitive audit goals</P>
         <P class="textS"> Identify competitors </P>
@@ -1242,7 +1243,7 @@
         <P class="titleS align-right">Summarize findings</P>
 
       </div>
-      <div class="vertical-line"></div>
+      <div class="lineVerAll"></div>
       <div class=" columnNon widthM">
         <P class="textS"> Competitive audit goals</P>
         <P class="textS"> Who are your key competitors?</P>
@@ -1262,7 +1263,7 @@
   <div class="row-change centerHorz alignCPH">
     <div
       class="row align-top widthS padding-s marginElm float align-left shadowOnly border-radius  ">
-      <img class="icon-list" src="list.svg" alt="&bull;">
+      <img class="widthIconS" src="list.svg" alt="&bull;">
       <div class="column ">
         <P class="titleM">Competitive audit goal </P>
         <div class="column">
@@ -1277,7 +1278,7 @@
 
     <div
       class="row align-top widthS padding-s marginElm float align-left shadowOnly border-radius  ">
-      <img class="icon-list" src="list.svg" alt="&bull;">
+      <img class="widthIconS" src="list.svg" alt="&bull;">
       <div class="column">
         <P class="titleM">Key competitors:</P>
         <div class="column">
@@ -1296,7 +1297,7 @@
 
     <div
       class="row align-top widthS padding-s marginElm float align-left shadowOnly border-radius  ">
-      <img class="icon-list" src="list.svg" alt="&bull;">
+      <img class="widthIconS" src="list.svg" alt="&bull;">
       <div class="column">
         <P class="titleM">Type and quality of competitors’ products:</P>
         <div class="column">
@@ -1314,7 +1315,7 @@
   <div class="row-change centerHorz alignCPH">
     <div
       class="row align-top widthS padding-s marginElm float align-left shadowOnly border-radius  ">
-      <img class="icon-list" src="list.svg" alt="&bull;">
+      <img class="widthIconS" src="list.svg" alt="&bull;">
       <div class="column">
         <P class="titleM">Competitors market</P>
         <div class="column">
@@ -1330,7 +1331,7 @@
 
     <div
       class="row align-top widthS padding-s marginElm float align-left shadowOnly border-radius  ">
-      <img class="icon-list" src="list.svg" alt="&bull;">
+      <img class="widthIconS" src="list.svg" alt="&bull;">
       <div class="column">
         <P class="titleM">Competitors self promotion:</P>
         <div class="column">
@@ -1346,7 +1347,7 @@
 
     <div
       class="row align-top widthS padding-s marginElm float align-left shadowOnly border-radius  ">
-      <img class="icon-list" src="list.svg" alt="&bull;">
+      <img class="widthIconS" src="list.svg" alt="&bull;">
       <div class="column">
         <P class="titleM">Competitors’ strengths: </P>
         <div class="column">
@@ -1366,7 +1367,7 @@
 
     <div
       class="row align-top widthS padding-s marginElm float align-left shadowOnly border-radius  ">
-      <img class="icon-list" src="list.svg" alt="&bull;">
+      <img class="widthIconS" src="list.svg" alt="&bull;">
       <div class="column">
         <P class="titleM">Competitors’ weaknesses </P>
         <div class="column">
@@ -1381,7 +1382,7 @@
     </div>
     <div
       class="row align-top widthS padding-s marginElm float align-left shadowOnly border-radius  ">
-      <img class="icon-list" src="list.svg" alt="&bull;">
+      <img class="widthIconS" src="list.svg" alt="&bull;">
       <div class="column">
         <P class="titleM">Opportunities: </P>
         <div class="column">
@@ -1396,7 +1397,7 @@
     </div>
     <div
       class="row align-top widthS padding-s marginElm float align-left shadowOnly border-radius  ">
-      <img class="icon-list" src="list.svg" alt="&bull;">
+      <img class="widthIconS" src="list.svg" alt="&bull;">
       <div class="column">
         <P class="titleM">Gaps </P>
         <div class="column">
