--- a/project/index.html
+++ b/project/index.html
@@ -151,7 +151,7 @@
 
   <!--body-->
   <div class="body-h">
-    <p class="vertical-line ver1"></p>
+    <p class="lineVerAll ver1"></p>
   </div>
   <!-- content-->
   <div class="row marginAll heightM centerVer marginAll1920">
@@ -166,11 +166,11 @@
       <a href="/project/meal_planner">
         <img src="../layout_mealplanner.png" alt="Meal Planner">
       </a>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="column widthM">
         <a href="/project/meal_planner" class="titleL" data-aos="fade-up">MEAL PLANNER</a>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">A mobile app helps planning a healthy meal</p>
         <p class="textM">May 2021 - August 2021</p>
       </div>
@@ -184,11 +184,11 @@
     <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
       <div class="column widthM">
         <a href="/project/gardeners_hub" class="titleL" data-aos="fade-up">GARDENERS HUB</a>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">A marketplace for local community</p>
         <p class="textM">May 2021 - August 2021</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <a href="/project/gardeners_hub">
         <img src="../layout_gardenershub.png" alt="Gardeners' Hub">
@@ -207,12 +207,12 @@
       <a href="/project/appointment_maker">
         <img src="../layout_AppointmentMaker.png" alt="Appointment Maker">
       </a>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="column widthM">
         <a href="/project/appointment_maker" class="titleL" data-aos="fade-up">Appointment
           Maker</a>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textS"> <strong>Project:</strong> &nbsp; Google UX Certificate Project 1</p>
         <p class="textS"> <strong>About:</strong> &nbsp; A scheduling app for making appointment
           makers</p>
@@ -233,14 +233,14 @@
 
       <div class="column widthM">
         <p href="/project/indie" class="titleL" data-aos="fade-up">Indie Rock bands Website</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textS"> <strong>Project:</strong> &nbsp; Google UX Certificate Project 2</p>
         <p class="textS"> <strong>About:</strong> &nbsp; A responsive website for album listening
           & ordering for Indie Rock bands</p>
         <p class="textS"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
         <p class="textM">Coming Soon</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <p href="/project/indie">
         <img src="../layout_IndieRockbands.png" alt="Meal Planner">
@@ -258,14 +258,14 @@
 
       <div class="column widthM">
         <p href="/project/meal_planner" class="titleL" data-aos="fade-up">Medication Reminder</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textS"> <strong>Project:</strong> &nbsp; Google UX Certificate Project 3</p>
         <p class="textS"> <strong>About:</strong> &nbsp; A cross-platform to help people remember
           to take medicine on time</p>
         <p class="textS"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
         <p class="textM">Coming Soon</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <p href="/project/meal_planner">
         <img src="../layout_MedicationReminder.png" alt="Meal Planner">
