--- a/architecture/LACAMA/index.html
+++ b/architecture/LACAMA/index.html
@@ -111,7 +111,7 @@
   </div>
   <!--head-->
   <span id="circle" class="circle"></span>
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <!--body-->
   <div class="marginAll">
@@ -120,13 +120,13 @@
     <!--site -->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="LACAMA.jpg" alt="DIAGRAM" class="image">
+        <img src="LACAMA.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
 
       <div class="body-right  body-txt">
         <p class="titleL">LACMA</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Problem cloud study to urbanism building design
         </p>
       </div>
@@ -144,7 +144,7 @@
     <div class="body-h">
       <div class="body-right body-txt">
         <P class="titleL"> PROBLEM CLOUD</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <br>
 
         <p class="textM">Using the skills, tools and materials gathered to date including
@@ -152,19 +152,19 @@
           construct a layered assemblage the problem cloud.
         </p>
       </div>
-      <div class="vertical-line-blank"></div>
+      <div class="blankVer"></div>
       <div class="body-left body-img float">
-        <img src="problem_cloud1.gif" alt="DIAGRAM" class="image">
+        <img src="problem_cloud1.gif" alt="DIAGRAM" >
       </div>
     </div>
     <!--Problem cloud-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!--Problem cloud-->
     <div class="body-h">
       <div class="body-right body-txt">
         <P class="titleL"> PROBLEM CLOUD</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <div class="blankHL"></div>
 
         <p class="textM">2 images in 3 color separations and one monochrome image. Take into
@@ -172,9 +172,9 @@
           corner and ground conditions.
         </p>
       </div>
-      <div class="vertical-line-blank"></div>
+      <div class="blankVer"></div>
       <div class="body-left body-img float">
-        <img src="problem_cloud2.gif" alt="DIAGRAM" class="image">
+        <img src="problem_cloud2.gif" alt="DIAGRAM" >
       </div>
     </div>
     <!--Problem cloud-->
@@ -192,13 +192,13 @@
     <!--Cloud Diagram -->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="problem_cloud.jpg" alt="DIAGRAM" class="image">
+        <img src="problem_cloud.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
       <div class="body-right body-txt">
         <P class="titleL">PROBLEM CLOUD DIAGRAM
         </P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <br>
         <p class="textM">2 images in 3 color separation and one monochrome image are
           interleaved in a repetitive pattern. </P>
@@ -211,13 +211,13 @@
     <!--Cloud Diagram -->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="problem_cloud1.jpg" alt="DIAGRAM" class="image">
+        <img src="problem_cloud1.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
       <div class="body-right body-txt">
         <P class="titleL">OPERATION METHOD
         </P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <br>
         <p class="textM">an armature continues around
           the corner for structure, image
@@ -231,13 +231,13 @@
     <!--Cloud Diagram -->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="problem_cloud2.jpg" alt="DIAGRAM" class="image">
+        <img src="problem_cloud2.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
       <div class="body-right body-txt">
         <P class="titleL">OPERATION METHOD
         </P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <br>
         <p class="textM">no corner armature, image
           layers are offset perpendicular
@@ -249,13 +249,13 @@
     <!--Cloud Diagram -->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="problem_cloud3.jpg" alt="DIAGRAM" class="image">
+        <img src="problem_cloud3.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
       <div class="body-right body-txt">
         <P class="titleL">OPERATION METHOD
         </P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <br>
         <p class="textM">no corner armature, image
           layers are offset perpendicular
@@ -276,17 +276,17 @@
     <div class="body-h">
       <div class="body-left  body-txt">
         <p class="titleL">FIRST ROUND TEST </p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">five sides of a box unfolded. As one
           layer of the image is folded to the box, formerly contiguous
           color areas are disconnected. An armature is necessary to
           hold the image layer together, and to align it with the other
           image layers. </p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-right body-img float">
-        <img src="test.jpg" alt="DIAGRAM" class="image">
+        <img src="test.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--CaseStudy1 -->
@@ -303,12 +303,12 @@
     <!--render -->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="render.jpg" alt="DIAGRAM" class="image">
+        <img src="render.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
       <div class="body-right body-txt">
         <P class="titleL">BOXES FROM PROBLEM CLOUD</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM"> Separate the boxes from the problem cloud </p>
 
       </div>
@@ -327,15 +327,15 @@
     <div class="body-h">
       <div class="body-left  body-txt">
         <p class="titleL"> OTHER MUSEUMS IN LA </p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">searching for context and narrative with other museums
 
         </p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-right body-img float">
-        <img src="site_city_1.jpg" alt="DIAGRAM" class="image">
+        <img src="site_city_1.jpg" alt="DIAGRAM" >
         <p class="textS styleItalic">Museums in LA</p>
       </div>
     </div>
@@ -344,14 +344,14 @@
     <div class="body-h">
       <div class="body-left  body-txt">
         <p class="titleL"> EXTENSION OF ANGLE ORIENTATION </p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Extension of the orientation of the boxes on site
         </p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-right body-img float">
-        <img src="site_city_2.jpg" alt="DIAGRAM" class="image">
+        <img src="site_city_2.jpg" alt="DIAGRAM" >
         <p class="textS styleItalic">Orientation of grid</p>
       </div>
     </div>
@@ -360,14 +360,14 @@
     <div class="body-h">
       <div class="body-left  body-txt">
         <p class="titleL">ANGLES IN BETWEEN VERTICALITY</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">the extension of the angles in between vertical box diagonal
         </p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-right body-img float">
-        <img src="site_city_3.jpg" alt="DIAGRAM" class="image">
+        <img src="site_city_3.jpg" alt="DIAGRAM" >
         <p class="textS styleItalic">Angle from top and bottom boxes</p>
       </div>
     </div>
@@ -376,19 +376,19 @@
     <div class="body-h">
       <div class="body-left  body-txt">
         <p class="titleL"> ANGLES IN BETWEEN HORIZONTALITY</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">the extension of the angles in between horizontal box diagonal
         </p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-right body-img float">
-        <img src="site_city_4.jpg" alt="DIAGRAM" class="image">
+        <img src="site_city_4.jpg" alt="DIAGRAM" >
         <p class="textS styleItalic"> Angle in between the rotated boxes</p>
       </div>
     </div>
     <!--Site and City4 -->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!-- content-->
     <div class="content-tl">
@@ -400,79 +400,79 @@
     <!--SITE Plan-->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="onsite.jpg" alt="DIAGRAM" class="image">
+        <img src="onsite.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
       <div class="body-right body-txt">
         <P class="titleL">SITE PLAN </P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Large-Scale</p>
       </div>
     </div>
     <!--site Plan-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!--Plan1-->
     <div class="body-h">
       <div class="body-right  body-txt">
         <p class="titleL">FLOOR PLAN </p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Ground Floor</p>
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
 
       <div class="body-left body-img float">
-        <img src="plan1.jpg" alt="DIAGRAM" class="image">
+        <img src="plan1.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--Plan1-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!--Plan2-->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="plan2.jpg" alt="DIAGRAM" class="image">
+        <img src="plan2.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
       <div class="body-right body-txt">
         <P class="titleL">FLOOR PLAN </P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">2F</p>
       </div>
     </div>
     <!--Plan2-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!--Plan3-->
     <div class="body-h">
       <div class="body-right  body-txt">
         <p class="titleL">FLOOR PLAN </p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">3F</p>
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
 
       <div class="body-left body-img float">
-        <img src="plan3.jpg" alt="DIAGRAM" class="image">
+        <img src="plan3.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--Plan3-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!--Plan4-->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="plan4.jpg" alt="DIAGRAM" class="image">
+        <img src="plan4.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
       <div class="body-right body-txt">
         <P class="titleL">FLOOR PLAN </P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">4F</p>
       </div>
     </div>
     <!--Plan4-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!-- content-->
     <div class="content-tl">
@@ -484,33 +484,33 @@
     <!--Elevations-->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="section1.jpg" alt="DIAGRAM" class="image">
+        <img src="section1.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
       <div class="body-right body-txt">
         <P class="titleL">ELEVATION </P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM"> Section A' - A'</p>
       </div>
     </div>
     <!--Elevations-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!--Elevation1-->
     <div class="body-h">
       <div class="body-right  body-txt">
         <p class="titleL">ELEVATION </p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM"> Section B' - B'</p>
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
 
       <div class="body-left body-img float">
-        <img src="section2.jpg" alt="DIAGRAM" class="image">
+        <img src="section2.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--Elevation1-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
 
 
