--- a/architecture/manifold_ground/index.html
+++ b/architecture/manifold_ground/index.html
@@ -122,13 +122,13 @@
     <!--site -->
     <div class="row-change centerVer">
       <div class="column float">
-        <img src="greylines.jpg" alt="DIAGRAM" class="image">
+        <img src="greylines.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
 
       <div class="column">
         <p class="titleL">MANIFOLD GROUND</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Form finding from 2 dimensions to 3 dimensions</p>
       </div>
 
@@ -146,11 +146,11 @@
     <!-- content-->
     <!--diagram-->
     <div class="column centerVer">
-      <img src="object.jpg" alt="DIAGRAM" class="image">
+      <img src="object.jpg" alt="DIAGRAM" >
 
       <div class="column widthM">
         <P class="titleL"> 2D TO 3D</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Manipulation of 2 dimensional drawing to 3d dimension geometry </p>
       </div>
     </div>
@@ -159,11 +159,11 @@
     <!--geometry-->
     <div class="column centerVer">
       <div class="column float">
-        <img src="model.jpg" alt="DIAGRAM" class="image">
+        <img src="model.jpg" alt="DIAGRAM" >
       </div>
       <div class="column widthM">
         <P class="titleL">GEOMETRY ON SITE</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Transfer the geometry to site </p>
       </div>
     </div>
@@ -174,13 +174,13 @@
     <div class="row-change centerVer">
       <div class="float">
         <p class="titleL">2D TO 3D MANIPULATION</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Cut and fold on both side of the bristol paper</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="column float">
-        <img src="cut.jpg" alt="DIAGRAM" class="image">
+        <img src="cut.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--density-->
@@ -195,13 +195,13 @@
     <div class="row-change centerVer">
       <div class="column">
         <p class="titleL">DIAGRAMS</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Programs including market, observation place, beer garden, etc. </p>
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
 
       <div class="column float">
-        <img src="diagram.jpg" alt="DIAGRAM" class="image">
+        <img src="diagram.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--site -->
@@ -218,12 +218,12 @@
     <!--Section Perspective -->
     <div class="row-change centerVer">
       <div class="column float">
-        <img src="render.jpg" alt="DIAGRAM" class="image">
+        <img src="render.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
       <div class="column ">
         <P class="titleL">FLYOVER VIEW</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">From the surrounding building people can see this build as an urban
           sculpture</p>
       </div>
@@ -241,16 +241,16 @@
     <div class="row-change centerVer">
       <div class="column">
         <p class="titleL">SITE</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">This site is one of the most popular places in san Francisco. Along
           the city axis, there are Saint Mary's Cathedral, SF City Hall, and there is a freeway
           entrance on the southern side.
         </p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="column float">
-        <img src="site1.jpg" alt="DIAGRAM" class="image">
+        <img src="site1.jpg" alt="DIAGRAM" >
       </div>
     </div>
     <!--Site -->
@@ -258,12 +258,12 @@
 
     <!--Site -->
     <div class="column centerVer">
-        <img src="site.jpg" alt="DIAGRAM" class="image">
+        <img src="site.jpg" alt="DIAGRAM" >
         <div class="blankHM"></div>
 
       <div class="column">
         <P class="titleL">SITE</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Site: 450 Hayes St. San Francisco, CA 94102</p>
 
       </div>
