--- a/architecture/thesis_studio/index.html
+++ b/architecture/thesis_studio/index.html
@@ -197,13 +197,13 @@
         <p class="textM">— Donald Judd </p>
 
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
 
       <div class="column">
         <p class="titleL">ON ORDER: DIFFERENTIATED CONTINUITY OF OBJECTS
 
         </p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Thesis Studio</p>
       </div>
     </div>
@@ -221,7 +221,7 @@
     <div class="column">
 
       <P class="titleL"> ABSTRACT</P>
-      <p class="horizontal-line"></p>
+      <p class="lineHorizAll"></p>
       <div class="blankHS"></div>
 
       <p class="textS ">Architecture is nothing more but a union of disparate systems, and
@@ -274,7 +274,7 @@
 
       <P class="titleL">OPERATION METHOD
       </P>
-      <p class="horizontal-line"></p>
+      <p class="lineHorizAll"></p>
       <br>
 
       <p class="textS">Architects use objects to connect and divide space. The arrangement of
@@ -308,14 +308,14 @@
     <div class="body-h">
       <div class="body-left  body-txt">
         <p class="titleL">CASE STUDY 1</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">Here are some historical buildings that have utilized continuity and
           discontinuity to create distinctive features. </p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-right body-img float">
-        <img src="CaseStudy1.jpg" alt="DIAGRAM" class="image">
+        <img src="CaseStudy1.jpg" alt="DIAGRAM" >
         <p class="textS styleItalic">SANNA, 21ST CENTURY MUSEUM OF CONTEMPORARY ART 2004 </p>
       </div>
     </div>
@@ -326,14 +326,14 @@
     <div class="body-h">
       <div class="body-left  body-txt">
         <p class="titleL">CASE STUDY 2</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">These case studies interpret the relationship between the
           architectural elements and aesthetic appeal. </p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-right body-img float">
-        <img src="CaseStudy2.jpg" alt="DIAGRAM" class="image">
+        <img src="CaseStudy2.jpg" alt="DIAGRAM" >
         <p class="textS styleItalic">JUNTA ISHIGAMI, KANAGAWA INSTITUTE OF TECHNOLOGY 2008</p>
       </div>
     </div>
@@ -342,14 +342,14 @@
     <div class="body-h">
       <div class="body-left  body-txt">
         <p class="titleL">CASE STUDY 3 </p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">The following experiments will explore the effect of changes in the
           degree of continuity and discontinuity in these iconic buildings.</p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-right body-img float">
-        <img src="CaseStudy3.jpg" alt="DIAGRAM" class="image">
+        <img src="CaseStudy3.jpg" alt="DIAGRAM" >
         <p class="textS styleItalic">MIES VAN DER ROHE, S.R. CROWN HALL 1956</p>
       </div>
     </div>
@@ -358,15 +358,15 @@
     <div class="body-h">
       <div class="body-left  body-txt">
         <p class="titleL">CASE STUDY 4</p>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">
 
         </p>
       </div>
-      <div class="vertical-line-blank">
+      <div class="blankVer">
       </div>
       <div class="body-right body-img float">
-        <img src="CaseStudy4.jpg" alt="DIAGRAM" class="image">
+        <img src="CaseStudy4.jpg" alt="DIAGRAM" >
         <p class="textS styleItalic">LE CORBUSIER, CARPENTER CENTER 1962</p>
       </div>
     </div>
@@ -382,12 +382,12 @@
     <!--Results of Manipulations -->
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="compare.jpg" alt="DIAGRAM" class="image">
+        <img src="compare.jpg" alt="DIAGRAM" >
       </div>
-      <div class="vertical-line-blank"> </div>
+      <div class="blankVer"> </div>
       <div class="body-right body-txt">
         <P class="titleL">RESULTS OF MANIPULATIONS</P>
-        <p class="horizontal-line"></p>
+        <p class="lineHorizAll"></p>
         <p class="textM">the comparison of the results of case study manipulations </p>
 
       </div>
@@ -405,7 +405,7 @@
     <!--project -->
     <div class="column">
       <p class="titleL"> My Understanding of Architecture </p>
-      <p class="horizontal-line"></p>
+      <p class="lineHorizAll"></p>
       <p class="textM">Architecture is nothing more but a union of disparate systems. Every
         aspect of an architectural design is part of one system or another. </p>
       <p class="textM">
@@ -420,13 +420,13 @@
 
 
 
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
 
   <!--project1 -->
   <div class="column marginAll">
     <p class="titleL"> My Understanding of Architecture </p>
-    <p class="horizontal-line"></p>
+    <p class="lineHorizAll"></p>
     <p class="textM"> Different types of sequences can be extended into larger systems.
       Through aggregation, combination, and in relation to other arrangements, they form larger
       spatial networks and complex material systems. </p>
@@ -443,14 +443,14 @@
     <p class="textS styleItalic">a union of disparate systems</p>
   </div>
   <!--project1 -->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <!--video-->
   <div class="column marginAll">
     <P class="titleL"> DIFFERENTIATED CONTINUITY </P>
-    <p class="horizontal-line"></p>
+    <p class="lineHorizAll"></p>
     <p class="textM">Differentiated continuity apply on different scales</p>
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <div class="centerHorz">
       <video width="70%" height="auto" controls autoplay>
@@ -472,7 +472,7 @@
   <!--Scale-->
   <div class="column marginAll">
     <p class="titleL">DRAWING</p>
-    <p class="horizontal-line"></p>
+    <p class="lineHorizAll"></p>
     <p class="textM">Large-Scale</p>
     <div class="blankHM"></div>
 
@@ -480,19 +480,19 @@
   </div>
 
   <!--Scale-->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <!--Scale-->
   <div class="column marginAll">
     <p class="titleL">DRAWING </p>
-    <p class="horizontal-line"></p>
+    <p class="lineHorizAll"></p>
     <p class="textM">Mid-Scale</p>
     <div class="blankHM"></div>
 
     <img src="methods1-1.png" alt="DIAGRAM" class="image float">
   </div>
   <!--Scale-->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <!--Scale-->
   <div class="column marginAll">
@@ -500,7 +500,7 @@
     <p class="textM">Large-Scale</p>
     <div class="blankHM"></div>
 
-    <img src="methods2.png" alt="DIAGRAM" class="image">
+    <img src="methods2.png" alt="DIAGRAM" >
 
   </div>
   <!--Scale-->
@@ -510,11 +510,11 @@
   <div class="column marginAll">
 
     <P class="titleL">DRAWING </P>
-    <p class="horizontal-line"></p>
+    <p class="lineHorizAll"></p>
     <p class="textM">Mid-Scale</p>
     <div class="blankHM"></div>
 
-    <img src="methods2-1.png" alt="DIAGRAM" class="image">
+    <img src="methods2-1.png" alt="DIAGRAM" >
 
   </div>
   <!--Scale-->
@@ -523,10 +523,10 @@
   <!--Scale-->
   <div class="column marginAll">
     <p class="titleL">DRAWING</p>
-    <p class="horizontal-line"></p>
+    <p class="lineHorizAll"></p>
     <p class="textM">Mid-Scale</p>
     <div class="blankHM"></div>
-    <img src="methods3.png" alt="DIAGRAM" class="image">
+    <img src="methods3.png" alt="DIAGRAM" >
   </div>
   <!--Scale-->
   <div class="blankHL"></div>
@@ -535,14 +535,14 @@
   <div class="column marginAll">
 
     <p class="titleL">DRAWING </p>
-    <p class="horizontal-line"></p>
+    <p class="lineHorizAll"></p>
     <p class="textM">Small-Scale</p>
     <div class="blankHM"></div>
 
-    <img src="methods3-1.png" alt="DIAGRAM" class="image">
+    <img src="methods3-1.png" alt="DIAGRAM" >
   </div>
   <!--Scale-->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
   <!-- content-->
   <div class="content-tl marginAll">
     <p class="tArrow"> Photo Documentation</p>
@@ -552,53 +552,53 @@
   <!--photos -->
   <div class="column marginAll">
     <P class="titleL">PHOTOS</P>
-    <p class="horizontal-line"></p>
+    <p class="lineHorizAll"></p>
     <p class="textM"> Circulation</p>
     <div class="blankHM"></div>
     <img src="photo1.png" alt="DIAGRAM" class="image float">
 
   </div>
   <!--photos -->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
 
   <!--photos -->
   <div class="column marginAll">
     <p class="titleL">PHOTOS </p>
-    <p class="horizontal-line"></p>
+    <p class="lineHorizAll"></p>
     <p class="textM">Structure </p>
     <div class="blankHM"></div>
 
     <img src="photo2.png" alt="DIAGRAM" class="image float">
   </div>
   <!--photos -->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <!--photos -->
   <div class="column marginAll">
 
     <P class="titleL">PHOTOS</P>
-    <p class="horizontal-line"></p>
+    <p class="lineHorizAll"></p>
     <p class="textM">Surface</p>
     <div class="blankHM"></div>
-    <img src="photo3.png" alt="DIAGRAM" class="image">
+    <img src="photo3.png" alt="DIAGRAM" >
 
 
   </div>
   <!--photos -->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <!--photos -->
   <div class="column marginAll">
     <p class="titleL">PHOTOS</p>
-    <p class="horizontal-line"></p>
+    <p class="lineHorizAll"></p>
     <p class="textM"> Perspective </p>
     <div class="blankHM"></div>
 
     <img src="photo4.png" alt="DIAGRAM" class="image float">
   </div>
   <!--photos -->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
 
 
